--- a/Guidelines/profile.html
+++ b/Guidelines/profile.html
@@ -3,16 +3,24 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<title>ODRL Profile for Policies of Language Resources and Technologies</title>
+		<meta charset='utf-8'>
 		<script src="https://www.w3.org/Tools/respec/respec-w3c" class="remove" defer></script>
-		<script class="remove" src="config.js"></script>
+<!--		<script class="remove" src="config.js"></script> -->
+	<script src="javascripts/codemirror-compressed.js"></script>
+	<script src="http://codemirror.net/mode/sparql/sparql.js"></script>
+	<script src="http://codemirror.net/addon/runmode/runmode.js"></script>
+	<script src="http://codemirror.net/addon/runmode/colorize.js"></script>
 		
 	<!-- this is a draft edition -->	
 		
 	<!-- Also possible the style from view-source:https://www.w3.org/TR/vocab-org/  --> 
 	<!--view-source:https://www.w3.org/TR/vocab-duv/-->
-	<link rel="stylesheet" href="https://www.w3.org/TR/vocab-duv/localstyle.css"/>
+	<!-- <link rel="stylesheet" href="https://www.w3.org/TR/vocab-duv/localstyle.css"/> -->
+	<link rel="stylesheet" href="stylesheets/codemirror.css"> 
 	<link rel="stylesheet" type="text/css" href="https://www.w3.org/StyleSheets/TR/2016/W3C-WG-NOTE"/>
-	<script src="http://www.w3.org/2013/ShEx/demobits/jquery.min.js" type= "text/javascript"></script>
+<!--	<script src="http://www.w3.org/2013/ShEx/demobits/jquery.min.js" type= "text/javascript"></script> -->
+
+
 		
 	</head>
 	<body>
